--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/app.css')}}">
+
+    {% block style %}
+    {% endblock %}
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+   
         <div class="container-fluid">
+             <nav class="navbar navbar-default">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -72,11 +76,13 @@
         </div>
     </div>
 
-
     
     <script src="{{url_for('static', filename='js/vendor/jquery.js', _external=True)}}"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.22/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{url_for('static', filename='js/tag-it.min.js')}}" type="text/javascript" charset="utf-8"></script>
     {% block script %} {% endblock %}
 </body>
 
