--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -16,6 +16,14 @@
 
     {% block style %}
     {% endblock %}
+
+    <style type="text/css">
+        .navbar-text {
+            font-size: 14px;
+            font-weight: bold;
+            padding: 0 10px 0px 0px;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,6 +31,11 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+
+                <a class="navbar-brand" href="{{url_for('.index', _external=True)}}">
+                    <img alt="Brand" width="25px" src="{{url_for('static', filename='logo.png')}}">
+                </a>
+
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -34,13 +47,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 {% if current_user.is_authenticated %}
-                <a type="button" href="{{url_for('.post')}}" class="btn btn-primary navbar-btn">Share a Post</a>
+                <a type="button" href="{{url_for('.post')}}" class="btn btn-default navbar-btn"> <img width="25px" src="{{url_for('static', filename='quill.png')}}"> &nbsp; Share a Post</a>
+
+                <a type="button" href="{{url_for('.feed')}}" class="btn btn-default navbar-btn"> <img width="25px" src="{{url_for('static', filename='feed.png')}}"> &nbsp; Follwer's Feed</a>
                 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{url_for('.logout')}}">Logout</a></li>
+                    <li><a class="btn btn-default navbar-btn" href="{{url_for('.logout')}}">Logout</a></li>
                 </ul>
 
                 <p class="navbar-text navbar-right">Signed in as <a href="{{url_for('.profile', email=current_user.email, _external=True)}}" class="navbar-link">{{current_user.username}}</a></p>
+                
                 {% else %}
 
                     <ul class="nav navbar-nav navbar-right">
