--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -29,7 +29,7 @@
 
 {% macro user_box(user) %}
 	<div class="pull-right userbox">
-		  <span class="pull-left glyphicon glyphicon glyphicon-user" aria-hidden="true"></span> <a href="{{url_for('.profile', email=user.email)}}">{{user.username}}</a>
+		  <img src="{{url_for('static', filename='user.png')}}"> <a href="{{url_for('.profile', email=user.email)}}">{{user.username}}</a>
 		  <br>
 	</div>
 {% endmacro %}
