--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -79,7 +79,7 @@
 		    border-style: solid;
 		    border-width: 1px;
 		    border-color: #C6C6C6;
-		    background: inherit;
+		    background: white;
 		}
 		ul.tagit li.tagit-choice {
 		    -moz-border-radius: 6px;
@@ -212,17 +212,21 @@
 	{% if current_user.is_authenticated %}
 		<h3>Share New Post</h3>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-2">
-				<form method="POST">
-					{{post_form.csrf_token}}
+			<div class="col-md-6 col-md-offset-3">
+				<div class="panel panel-primary">
+					<div class="panel-body">
+						<form method="POST">
+						{{post_form.csrf_token}}
 
-					{{render_field(post_form.title, class='form-control')}}
-					{{render_field(post_form.category, class='form-control')}}
-					{{render_field(post_form.tags, class='form-control')}}
-					{{render_field(post_form.text, class='form-control')}}
+						{{render_field(post_form.title, class='form-control', placeholder='Title')}}
+						{{render_field(post_form.category, class='form-control')}}
+						{{render_field(post_form.tags, class='form-control')}}
+						{{render_field(post_form.text, class='form-control')}}
 
-					{{post_form.submit(class='btn btn-default')}}
-				</form>
+						{{post_form.submit(class='btn btn-primary btn-block')}}
+					</form>	
+					</div>
+				</div>
 			</div>	
 		</div>
 	{% else %}
