--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -49,7 +49,7 @@
                 {% if current_user.is_authenticated %}
                 <a type="button" href="{{url_for('.post')}}" class="btn btn-default navbar-btn"> <img width="25px" src="{{url_for('static', filename='quill.png')}}"> &nbsp; Share a Post</a>
 
-                <a type="button" href="{{url_for('.feed')}}" class="btn btn-default navbar-btn"> <img width="25px" src="{{url_for('static', filename='feed.png')}}"> &nbsp; Follwer's Feed</a>
+                <a type="button" href="{{url_for('.feed')}}" class="btn btn-default navbar-btn"> <img width="25px" src="{{url_for('static', filename='feed.png')}}"> &nbsp; Follower's Feed</a>
                 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="btn btn-default navbar-btn" href="{{url_for('.logout')}}">Logout</a></li>
@@ -60,8 +60,8 @@
                 {% else %}
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{url_for('.login')}}">Login</a></li>
-                        <li><a href="{{url_for('.register')}}">Register</a></li>
+                        <li><a class="btn btn-default navbar-btn" href="{{url_for('.login')}}">Login</a></li>
+                        <li><a class="btn btn-default navbar-btn" href="{{url_for('.register')}}">Register</a></li>
                     </ul>
                 {% endif %}
             </div>
