--- a/app/templates/followings.html
+++ b/app/templates/followings.html
@@ -4,7 +4,7 @@
 {% block content%}
 
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-default">
 			  <div class="panel-body">
 				
@@ -22,7 +22,7 @@
 						{{user_box(row.user)}}
 						
 						{% if current_user.has_liked_post(row.posts.id) %}
-							<button type="button" class="btn btn-success">Liked</button>
+							<button type="button" class="btn btn-success"><img width="25px" src="{{url_for('static', filename='liked.png')}}"> Liked</button>
 						{% else %}
 							<form action="/like-post" method="POST">
 								{{like.csrf_token}}
